# rag-prompt-injection-detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_bot.sh
data/: README.md
model/: README.md
notebooks/: 04_improved_llm_evaluation.ipynb  05_system_prompts_comparison.ipynb  RAG_promt_detector (1).ipynb  only_rag_detector.ipynb  rag_final.ipynb
rag-prompt-injection-detector/: README.md
rag_prompt_injection_detector/: README.md  __init__.py  bot.py  detector.py  primary_cpu.pt  rag.py  vectorstore.py
rag_prompt_injection_detector/data/: README.md  questions_with_embeddings.parquet
telegram_bot/: README.md  __init__.py  bot.py  rag_client.py
