[tool.poetry]
name = "rag-prompt-injection-detector"
version = "0.1.0"
description = "RAG system with light defence from jailbreaks"
authors = ["Strelkov Andrey, Ikonnikov Mark, Prein Dmitrii, Korneenko Sergei, Portnov Timyr"]
readme = "README.md"
repository = "https://github.com/asesen/rag-prompt-injection-detector"
keywords = ["data science", "machine learning", "rag", "prompt injection", "security"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.11"
python-telegram-bot = "^20.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^7.4.4"

[tool.black]
line-length = 90
target-version = ["py311"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.flake8]
max-line-length = 90
ignore = ['E203', 'E501', 'W503', 'B950']
max-complexity = 12
select = ['B', 'C', 'E', 'F', 'W', 'B9']
per-file-ignores = [
    # for easier imports to __init__ without __all__
    '**/__init__.py: F401',
    # file to define custom types
    'types.py: F401',
]
count = true

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "pyproject.toml"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[tool.nbqa.mutate]
black = 1
isort = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
